# python

module0/ex00/: answers.txt  requirements.txt
module0/ex02/: whois.py
module0/ex03/: count.py
module0/ex05/: kata01.py  kata03.py
module00/ex00/: answers.txt  requirements.txt
module00/ex01/: exec.py
module00/ex02/: whois.py
module00/ex03/: count.py
module00/ex04/: operations.py
module00/ex05/: kata00.py  kata02.py  kata03.py  kata04.py
module00/ex06/: recipe.py
module00/ex07/: filterwords.py
module00/ex08/: sos.py
module00/ex09/: guess.py
module00/ex10/: loading.py
module01/ex00/: book.py  recipe.py  test.py
module01/ex01/: game.py
module01/ex02/: test.py  vector.py
module01/ex03/: generator.py
module01/ex04/: eval.py
module01/ex05/: bank.py  banking_test3.py  the_bank.py
module02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
module02/ex01/: main.py
module02/ex02/: logger.py
module02/ex03/: csvreader.py
module02/ex04/: README.md  build.sh  pyproject.toml  setup.py  test.py
module02/ex04/my-minipack/: loading.py  logger.py
module02/ex04/my_minipack/: logger.py  progress.py
module02/ex04/src/my-minipack/: loading.py
module02/ex05/: TinyStatistician.py
module03/ex00/: NumPyCreator.py
module03/ex01/: ImageProcessor.py
module03/ex02/: ScrapBooker.py
module03/ex03/: ColorFilter.py
module03/ex04/: Kmeans.py
module04/ex00/: FileLoader.py  test_data.csv
module04/ex01/: YoungestFellah.py
module04/ex02/: ProportionBySport.py
module04/ex03/: HowManyMedals.py
module04/ex04/: SpatioTemporalData.py
(+3 files in other folders)
