[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-minipack"
version = "1.0.0"
authors = [
  { name="cmariot", email="cmariot@student.42.fr" },
]
description = "A small example package."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cmariot/python"
"Bug Tracker" = "https://github.com/cmariot/python/issues"

